<resources>
    <string name="app_name">Socialify.io</string>

    // LOGIN
    <string name="login_title">Log in</string>
    <string name="login_subtitle">with your Socialify account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_create_account_one">Don\'t have an account?</string>
    <string name="login_crete_account_two">Create it!</string>
    <string name="login_button">Log in</string>

    // REGISTER
    <string name="register_title">Create</string>
    <string name="register_subtitle">your Socialify account</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_login_to_account_one">Already have an account?</string>
    <string name="register_login_to_account_two">Log in</string>
    <string name="register_button">Create</string>
    <string name="register_success">Account has been successfully created. Now you\'ll be moved to login panel.</string>

    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_main2">MainActivity2</string>

    // CHAT
    <string name="message_input_placeholder">Text here...</string>
    <string name="search">Search</string>

    // Icon content descriptions
    <string name="go_back_icon_button">Go back</string>
    <string name="send_message_icon_button">Send message</string>

</resources>
