<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:id="@+id/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterFragment">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.275" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="213dp"
            android:layout_height="218dp"
            app:layout_constraintBottom_toTopOf="@+id/registerTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_socialify_logo" />

        <TextView
            android:id="@+id/registerSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle"
            app:layout_constraintVertical_bias="0.005" />

        <EditText
            android:id="@+id/registerUsernameInput"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/register_username"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/cursor"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSubtitle" />

        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/cursor"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUsernameInput" />

        <EditText
            android:id="@+id/registerRepeatPasswordInput"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_password_repeat"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/cursor"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerRepeatPasswordInput"
            app:layout_constraintVertical_bias="0.06">

            <TextView
                android:id="@+id/goToLogInOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/register_login_to_account_one"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/goToLogInTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:text="@string/register_login_to_account_two"
                android:textColor="@color/primary_color" />
        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button"
            android:text="@string/register_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
