<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.275" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="213dp"
            android:layout_height="218dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_socialify_logo" />

        <TextView
            android:id="@+id/loginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
            app:layout_constraintVertical_bias="0.005" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/login_username"
            android:ems="10"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/login_password"
            android:ems="10"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/actionButton"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/actionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
            app:layout_constraintVertical_bias="0.092">

            <TextView
                android:id="@+id/createAccountOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/login_create_account_one"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/createAccountTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:text="@string/login_crete_account_two"
                android:textColor="@color/primary_color" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
